--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
   "dependencies": {
     "@ai-sdk/fireworks": "^0.1.8",
     "@ai-sdk/openai": "1.1.9",
+    "@azure/msal-browser": "^4.5.1",
+    "@azure/msal-react": "^3.0.5",
     "@codemirror/lang-javascript": "^6.2.2",
     "@codemirror/lang-python": "^6.1.6",
     "@codemirror/state": "^6.5.0",
     "@codemirror/theme-one-dark": "^6.1.2",
     "@codemirror/view": "^6.35.3",
+    "@microsoft/microsoft-graph-client": "^3.0.7",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
@@ -39,6 +42,7 @@
     "@vercel/blob": "^0.24.1",
     "@vercel/postgres": "^0.10.0",
     "ai": "4.1.44",
+    "axios": "^1.8.1",
     "bcrypt-ts": "^5.0.2",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
@@ -51,6 +55,8 @@
     "fast-deep-equal": "^3.1.3",
     "framer-motion": "^11.3.19",
     "geist": "^1.3.1",
+    "googleapis": "^146.0.0",
+    "isomorphic-fetch": "^3.0.0",
     "lucide-react": "^0.446.0",
     "nanoid": "^5.0.8",
     "next": "15.0.3-canary.2",
